添加交易安全保护功能并优化性能
玩家交易期间的伤害保护和移动保护功能
java版本从11改为8以提高兼容性
修改命令权限检查和物品返还机制
优化字符串重复方法，使用循环替代repeat函数
README文件补充介绍、内容