@@ -1,13 +1,11 @@
 package cc.sbsj.polang.goodstrade.gui.view;
 
-import cc.sbsj.polang.goodstrade.gui.Gui;
 import cc.sbsj.polang.goodstrade.gui.GuiButton;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 
 public class View {
     public final static ItemStack air = new ItemStack(Material.AIR);
@@ -35,7 +33,7 @@ public class View {
 
     public static final List<Integer> senderTradeSlots = new ArrayList<>();
     public static final List<Integer> targetTradeSlots = new ArrayList<>();
-    public static List<Integer> readySlots = List.of(46, 47, 48, 50, 51, 52);
+    public static final Set<Integer> readySlots = new HashSet<>(Arrays.asList(46, 47, 48, 50, 51, 52));
 
 
     static {
@@ -83,7 +81,7 @@ public class View {
     public static void defaultItemBackGround() {
         ItemMeta meta = backGround.getItemMeta();
         meta.setDisplayName(" ");
-        List<String> lore = List.of(" ");
+        List<String> lore = Arrays.asList(" ");
         meta.setLore(lore);
         backGround.setItemMeta(meta);
     }
@@ -91,15 +89,15 @@ public class View {
     public static void defaultItemReady() {
         ItemMeta meta = readyButtonItem.getItemMeta();
         meta.setDisplayName("§7当前未确认");
-        List<String> lore = List.of("", "§a单击可确认");
+        List<String> lore = Arrays.asList("", "§a单击可确认");
         meta.setLore(lore);
         readyButtonItem.setItemMeta(meta);
     }
 
     public static void defaultItemReadyYes() {
         ItemMeta meta = readyButtonItemYes.getItemMeta();
-        meta.setDisplayName("§e您已确认");
-        List<String> lore = List.of("", "§a等待对方确认");
+        meta.setDisplayName("§e已确认");
+        List<String> lore = Arrays.asList("", "§a等待对方确认");
         meta.setLore(lore);
         readyButtonItemYes.setItemMeta(meta);
     }
@@ -107,7 +105,7 @@ public class View {
     public static void defaultItemReadyWait() {
         ItemMeta meta = readyButtonItemWait.getItemMeta();
         meta.setDisplayName("§b确认交易中...");
-        List<String> lore = List.of("", "§e可检查对方物品是否符合要求", "§6若存在问题请再次点击取消确认！");
+        List<String> lore = Arrays.asList("", "§e可检查对方物品是否符合要求", "§6若存在问题请再次点击以取消确认！");
         meta.setLore(lore);
         readyButtonItemWait.setItemMeta(meta);
     }
@@ -115,7 +113,7 @@ public class View {
     public static void defaultItemCancelReady() {
         ItemMeta meta = cancelReadyItem.getItemMeta();
         meta.setDisplayName("§c对方取消");
-        List<String> lore = List.of("", "§e再次点击重新开始，需要双方都确认才可进行交易");
+        List<String> lore = Arrays.asList("", "§e再次点击重新开始，需要双方都确认才可进行交易");
         meta.setLore(lore);
         cancelReadyItem.setItemMeta(meta);
     }
@@ -123,7 +121,7 @@ public class View {
     public static void defaultItemInfo() {
         ItemMeta meta = infoItem.getItemMeta();
         meta.setDisplayName("§7分隔板");
-        List<String> lore = List.of("",
+        List<String> lore = Arrays.asList("",
                 "§a交易发起者默认在左侧",
                 "§a被发起者默认在右侧",
                 "§e将想要交易的物品放入后点击下方确认",
